--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 [Bb]uilds/
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
+Cauldron Chaos/Assets/*
+# unignore own assets
+!Cauldron Chaos/Assets/CauldronChaos/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
